fix: wrap link text

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,13 @@ main {
 h1 {
     color: var(--primary);
 }
-
+a {
+    white-space: pre-wrap; /* CSS3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
 /* HEADER */
 .header {
     position: fixed;
